--- a/gateway-app/src/main/resources/web/gateway/appInst.html
+++ b/gateway-app/src/main/resources/web/gateway/appInst.html
@@ -2,10 +2,14 @@
   <h1>Application Instance: {{appInst.name}}</h1>
   <ul class="list-unstyled">
     <li>ID : {{appInst.id}}</li>
+    <!--
     <li>Host : {{appInst.host}}</li>
     <li>Port : {{appInst.port}}</li>
     <li>Path : {{appInst.path}}</li>
-    <li>Haproxy State : {{}}</li>
+    -->
+    <li>Server : {{appInst.server}}</li>
+    <li>Haproxy State : {{appInst.haProxyState}}</li>
+    <li>Weight : {{appInst.weight}}</li>
     <li>In load balancers:
       <ul ng-repeat="(lb, value) in rawStatusForOneInst">
         <li><a href="#/lb/{{lb}}">{{lb}}</a></li>
@@ -14,10 +18,12 @@
     </li>
     <ul ng-show="!rawStatusForOneInst">No loadbalancers associated with this application instance
     </ul>
-    <button class="btn btn-info" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-tag"></span>
-      Edit
+    <button class="btn btn-info" data-toggle="modal" data-target="#myModal"><span
+        class="glyphicon glyphicon-pencil"></span> Edit
     </button>
-    <button type="button" class="btn btn-danger" ng-click="deleteAppInst()"><span class="glyphicon glyphicon-trash"></span>  Delete</button>
+    <button type="button" class="btn btn-danger" ng-click="deleteAppInst()"><span
+        class="glyphicon glyphicon-trash"></span> Delete
+    </button>
 
   </ul>
 </div>
@@ -39,7 +45,7 @@
             <label for="inAppInstName">Name</label>
             <input type="text" ng-model="appInst.name" class="form-control" id="inAppInstName">
           </div>
-
+          <!--
           <div class="form-group">
             <label for="inAppInstHost">Host</label>
             <input type="text" ng-model="appInst.host" class="form-control " id="inAppInstHost" name="host"
@@ -55,6 +61,18 @@
             <label for="inAppInstPath">Path</label>
             <input type="text" ng-model="appInst.path" class="form-control" id="inAppInstPath"
                    placeholder="Enter path / url">
+          </div>
+          -->
+          <div class="form-group">
+            <label for="inAppInstServer">Server</label>
+            <input type="text" ng-model="appInst.server" class="form-control " id="inAppInstServer" name="server"
+                   required
+                   placeholder="Enter server">
+          </div>
+          <div class="form-group">
+            <label for="inAppInstWeight">Weight</label>
+            <input type="number" ng-model="appInst.weight" class="form-control" id="inAppInstWeight"
+                   placeholder="Enter weight">
           </div>
 
           <button type="submit" class="btn btn-primary" ng-disabled="form.$invalid ">Update</button>
