Added loadbalancercontrollermethod for generating configfile. Also changed the loadbalancergui, so that the configfile is only written when "start loadbalancer" is called

--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -187,18 +187,12 @@
 <div class="row">
 
   <button type="button" class="btn btn-primary" ng-model="collapseConfig" ng-click="collapseConfig=!collapseConfig">
-    Show/Hide HA Proxy config file
+    Show new configfile for Haproxy
   </button>
-
-  <!--<p style="white-space: pre;">{{ configFile}}</p>-->
 
   <div ng-show="collapseConfig">
     <pre>{{configFile}}</pre>
   </div>
-
-</div>
-
-
 <hr>
 
 
