--- a/gateway-app/src/main/resources/web/gateway/lbform.html
+++ b/gateway-app/src/main/resources/web/gateway/lbform.html
@@ -33,10 +33,75 @@
         <span class="bg-danger" ng-show="lbform.publicPort.$error.integer">This is not valid integer!</span>
         <span class="bg-danger" ng-show="lbform.publicPort.$error.min || lbform.publicPort.$error.max">  The value must be in range 1 to 65535!</span>
 
-
-
-
     </div>
+
+ <H4>Timeouts</H4>
+  <div class="row">
+    <div class="col-xs-2 form-group">
+      <label for="inLbCheck">Check</label>
+      <input type="number"
+             ng-model="lb.checkTimeout"
+             class="form-control "
+             id="inLbCheck"
+             name="check"
+             required integer
+             min = "1">
+      <span class="bg-danger" ng-show="lbform.check.$error.integer">This is not valid integer!</span>
+      <span class="bg-danger" ng-show="lbform.check.$error.min">  The value must be larger than 1!</span>
+    </div>
+    <div class="col-xs-2 form-group">
+      <label for="inLbConnect">Connect</label>
+      <input type="number"
+             ng-model="lb.connectTimeout"
+             class="form-control "
+             id="inLbConnect"
+             name="connect"
+             required integer
+             min = "1">
+      <span class="bg-danger" ng-show="lbform.connect.$error.integer">This is not valid integer!</span>
+      <span class="bg-danger" ng-show="lbform.connect.$error.min">  The value must be larger than 1!</span>
+    </div>
+    <div class="col-xs-2 form-group">
+      <label for="inLbServer">Server</label>
+      <input type="number"
+             ng-model="lb.serverTimeout"
+             class="form-control "
+             id="inLbServer"
+             name="server"
+             required integer
+             min = "1">
+      <span class="bg-danger" ng-show="lbform.server.$error.integer">This is not valid integer!</span>
+      <span class="bg-danger" ng-show="lbform.server.$error.min">  The value must be larger than 1!</span>
+      <span class="bg-danger" ng-show="!validateServerClient()">Must be equal to client </span>
+    </div>
+    <div class="col-xs-2 form-group">
+      <label for="inLbClient">Client</label>
+      <input type="number"
+             ng-model="lb.clientTimeout"
+             class="form-control "
+             id="inLbClient"
+             name="client"
+             required integer
+             min = "1">
+      <span class="bg-danger" ng-show="lbform.client.$error.integer">This is not valid integer!</span>
+      <span class="bg-danger" ng-show="lbform.client.$error.min">  The value must be larger than 1!</span>
+      <span class="bg-danger" ng-show="!validateServerClient()">Must be equal to server </span>
+    </div>
+    <div class="col-xs-2 form-group">
+      <label for="inLbRetries">Retries</label>
+      <input type="number"
+             ng-model="lb.retries"
+             class="form-control "
+             id="inLbRetries"
+             name="retries"
+             required integer
+             min = "1"
+             value = "2">
+      <span class="bg-danger" ng-show="lbform.retries.$error.integer">This is not valid integer!</span>
+      <span class="bg-danger" ng-show="lbform.retries.$error.min">  The value must be larger than 1!</span>
+    </div>
+  </div>
+
     <div class="form-group">
         <label for="inLbHost">SSH Key</label>
         <textarea rows="12" ng-model="lb.sshKey" class="form-control " id="inLbSshKey"
