--- a/gateway-app/src/main/resources/web/gateway/lbform.html
+++ b/gateway-app/src/main/resources/web/gateway/lbform.html
@@ -69,7 +69,8 @@
              id="inLbServer"
              name="server"
              required integer
-             min = "1">
+             min = "1"
+             >
       <span class="bg-danger" ng-show="lbform.server.$error.integer">This is not valid integer!</span>
       <span class="bg-danger" ng-show="lbform.server.$error.min">  The value must be larger than 1!</span>
       <span class="bg-danger" ng-show="!validateServerClient()">Must be equal to client </span>
@@ -82,7 +83,8 @@
              id="inLbClient"
              name="client"
              required integer
-             min = "1">
+             min = "1"
+          disabled>
       <span class="bg-danger" ng-show="lbform.client.$error.integer">This is not valid integer!</span>
       <span class="bg-danger" ng-show="lbform.client.$error.min">  The value must be larger than 1!</span>
       <span class="bg-danger" ng-show="!validateServerClient()">Must be equal to server </span>
